--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Abraham V.",
   "license": "ISC",
   "devDependencies": {
+    "express": "^4.15.2",
     "gulp": "^3.9.1",
     "gulp-sass": "^3.1.0"
   }
