--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
   "author": "Abraham V.",
   "license": "ISC",
   "devDependencies": {
+    "autoprefixer": "^6.7.7",
     "express": "^4.15.2",
     "gulp": "^3.9.1",
-    "gulp-sass": "^3.1.0"
+    "gulp-postcss": "^6.4.0",
+    "gulp-sass": "^3.1.0",
+    "gulp-sourcemaps": "^2.4.1",
+    "postcss-flexbugs-fixes": "^2.1.0"
   }
 }
